// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleNodeChangeIntent* should race getCurrentBlock and delay 1`] = `
Object {
  "@@redux-saga/IO": true,
  "RACE": Object {
    "lb": Object {
      "@@redux-saga/IO": true,
      "CALL": Object {
        "args": Array [],
        "context": null,
        "fn": [Function],
      },
    },
    "to": Object {
      "@@redux-saga/IO": true,
      "CALL": Object {
        "args": Array [
          5000,
        ],
        "context": null,
        "fn": [Function],
      },
    },
  },
}
`;

exports[`handleNodeChangeIntent* should select getCustomNodeConfig and match race snapshot 1`] = `
Object {
  "@@redux-saga/IO": true,
  "RACE": Object {
    "lb": Object {
      "@@redux-saga/IO": true,
      "CALL": Object {
        "args": Array [],
        "context": null,
        "fn": [Function],
      },
    },
    "to": Object {
      "@@redux-saga/IO": true,
      "CALL": Object {
        "args": Array [
          5000,
        ],
        "context": null,
        "fn": [Function],
      },
    },
  },
}
`;

exports[`pollOfflineStatus* should race pingSucceeded and timeout 1`] = `
Object {
  "@@redux-saga/IO": true,
  "RACE": Object {
    "pingSucceeded": Object {
      "@@redux-saga/IO": true,
      "CALL": Object {
        "args": Array [],
        "context": null,
        "fn": [Function],
      },
    },
    "timeout": Object {
      "@@redux-saga/IO": true,
      "CALL": Object {
        "args": Array [
          5000,
        ],
        "context": null,
        "fn": [Function],
      },
    },
  },
}
`;

exports[`pollOfflineStatus* should toggle offline and show notification if navigator agrees with isOffline and ping fails 1`] = `
Object {
  "@@redux-saga/IO": true,
  "PUT": Object {
    "action": Object {
      "payload": Object {
        "duration": 5000,
        "id": 0.001,
        "level": "info",
        "msg": "You are currently offline. Some features will be unavailable.",
      },
      "type": "SHOW_NOTIFICATION",
    },
    "channel": null,
  },
}
`;
